--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 <div class="col-lg-12">
 <h1> Gif Search </h1>
 </div>
+</div>
 
 <!-- buttons get dumped here  -->
 <div class ="row">
 <div class="col-lg-12">
 <div id="buttons-view"></div>
+</div>
 </div>
 <!-- form for button creation  -->
 <div class ="row">
@@ -38,6 +40,7 @@
 
 <input id= "add-animal" type="submit" value="add an animal"> 
 </form>
+</div>
 </div>
 
 <!-- ANIMALS GET DUMPED HERE  -->
